--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Signup"></activity>
+        <activity android:name=".TakePhoto"></activity>
+        <activity android:name=".Signup" />
         <activity android:name=".Login" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
