--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,20 +16,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdminActivity"></activity>
-        <activity android:name=".MyNewsActivity" />
-        <activity android:name=".EditProfileActivity" />
-        <activity android:name=".MessageActivity" />
-        <activity android:name=".TakePhoto">
+        <activity android:name=".EditProfileAdminActivity"></activity>
+        <activity android:name=".AdminActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MyNewsActivity" />
+        <activity android:name=".EditProfileActivity" />
+        <activity android:name=".MessageActivity" />
+        <activity android:name=".TakePhoto"></activity>
         <activity android:name=".Signup" />
         <activity android:name=".Login" />
-
 
         <provider
             android:name="androidx.core.content.FileProvider"
