--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,14 +24,16 @@
         <activity android:name=".EditProfileActivity" />
         <activity android:name=".MessageActivity" />
         <activity android:name=".TakePhoto">
+
+        </activity>
+        <activity android:name=".Signup" />
+        <activity android:name=".Login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Signup" />
-        <activity android:name=".Login" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
