--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ListPublicationUser"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,15 +25,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".EditProfileAdminActivity" />
-        <activity android:name=".AdminActivity"></activity>
+        <activity android:name=".AdminActivity" />
         <activity android:name=".MyNewsActivity" />
         <activity android:name=".EditProfileActivity" />
         <activity android:name=".MessageActivity" />
-        <activity android:name=".TakePhoto"></activity>
+        <activity android:name=".TakePhoto" />
         <activity android:name=".Signup" />
-        <activity android:name=".Login">
-
-        </activity>
+        <activity android:name=".Login"></activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
