--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,3 +40,4 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 }
+apply plugin: 'com.google.gms.google-services'
